AH-2002-03-04-3: Enhancem.: Added PVM 3.4.4 Virtual Machine ID setting
                            to startpvm.sh from Andrew Shewmaker

AH-2002-03-04-0: Bugfix:    A set of fixes on initiative from Patrik Koch

EB-2002-03-04-1: Bugfix:    'qalter -h xxx' caused core if task of array
                            did not exist.
                 Issue:     171

EB-2002-03-04-0: Bugfix:    schedd_runlog file was not written by a 
                            'qconf -tsm' command
                 Issue:     170

CR-2002-03-01-2: Bugfix:    error in CR-2002-03-01-1 when showing only one 
                            long project/dep/...  by using 
                            e.g. -P LONG_PROJECT_NAME  - fixed

CR-2002-03-01-1: Bugfix:    qacct truncates project/department/... names to
                 Enhancem.: x chars. -> calculate column with by searching
                            for largest element
                 Issue:     #150

EB-2002-03-01-1: Bugfix:    inconsistences between qstat and qmon output
                 Issue:     #148  

CR-2002-03-01-0: Testsuite: - using source/dist/util/arch from source directory
                              and not from product_root/util/arch. This 
                              prevents errors on testsuite first setup call. 

EB-2002-03-01-0: Bugfix:    "scheduler tries to schedule xxx twice" logging in
                            qmaster
                 Issue:     #167     

CR-2002-03-01-0: Testsuite: - runlevel of large_cluster performance test set to
                              300++ ( day )

CR-2002-02-28-1: Testsuite:
                 Enhancem.: - new test: system_tests/sheperd/submit_del
                              testing sheperd signaling with sheperd wrapper
                              script.
                 Issue:     #125  (Part 1)
                 Bugfix:    - fixed typo in system_tests/clients/qdel
                            - removed unused var in system_tests/shadowd/migrate
