@@ -1136,64 +1136,116 @@ int job_set_submit_task_ids(lListElem *job, u_long32 start, u_long32 end,
    return ret;
 }          
 
-/****** gdi/job_jatask/job_get_smallest_task_id() ******************************
+/****** gdi/job_jatask/job_get_smallest_unenrolled_task_id() ******************
 *  NAME
-*     job_get_smallest_task_id() -- return the smallest un/enrolled id 
+*     job_get_smallest_unenrolled_task_id() -- find smallest unenrolled id 
 *
 *  SYNOPSIS
-*     u_long32 job_get_smallest_task_id(const lListElem *job) 
+*     u_long32 job_get_smallest_unenrolled_task_id(const lListElem *job) 
 *
 *  FUNCTION
-*     returns the smallest task id currently existing in a job 
-*     independent whether it is enrolled or unenrolled
+*     Returns the smallest task id currently existing in a job 
+*     which is not enrolled in the JB_ja_tasks sublist of 'job'.
+*     If all tasks are enrolled 0 will be returned. 
 *
 *  INPUTS
 *     const lListElem *job - JB_Type element 
 *
 *  RESULT
-*     u_long32 - task id
-*******************************************************************************/
-u_long32 job_get_smallest_task_id(const lListElem *job)
+*     u_long32 - task id or 0
+******************************************************************************/
+u_long32 job_get_smallest_unenrolled_task_id(const lListElem *job)
 {
-   lListElem *first;
    u_long32 n_h_id, u_h_id, o_h_id, s_h_id;
-   u_long32 ret; 
+   u_long32 ret = 0; 
 
    n_h_id = range_list_get_first_id(lGetList(job, JB_ja_n_h_ids), NULL);    
    u_h_id = range_list_get_first_id(lGetList(job, JB_ja_u_h_ids), NULL);    
    o_h_id = range_list_get_first_id(lGetList(job, JB_ja_o_h_ids), NULL);    
    s_h_id = range_list_get_first_id(lGetList(job, JB_ja_s_h_ids), NULL);    
-   first = lFirst(lGetList(job, JB_ja_tasks));  
    ret = n_h_id;
-   ret = MIN(ret, u_h_id);
-   ret = MIN(ret, o_h_id);
-   ret = MIN(ret, s_h_id);
-   if (first != NULL) {
-      ret = MIN(ret, lGetUlong(first, JAT_task_number));
+   if (ret > 0 && u_h_id > 0) {
+      ret = MIN(ret, u_h_id);
+   } else if (u_h_id > 0) {
+      ret = u_h_id;
+   }
+   if (ret > 0 && o_h_id > 0) {
+      ret = MIN(ret, o_h_id);
+   } else if (o_h_id > 0) {
+      ret = o_h_id;
+   }
+   if (ret == 0 && s_h_id > 0)  {
+      ret = MIN(ret, s_h_id);
+   } else if (s_h_id > 0 ){
+      ret = s_h_id; 
    }
    return ret;
 }
 
-/****** gdi/job_jatask/job_get_biggest_task_id() *******************************
+/****** gdi/job_jatask/job_get_smallest_enrolled_task_id() ********************
 *  NAME
-*     job_get_biggest_task_id() -- return the biggest un/enrolled id 
+*     job_get_smallest_enrolled_task_id() -- find smallest enrolled tid 
 *
 *  SYNOPSIS
-*     u_long32 job_get_biggest_task_id(const lListElem *job) 
+*     u_long32 job_get_smallest_enrolled_task_id(const lListElem *job) 
 *
 *  FUNCTION
-*     returns the biggest task id currently existing in a job 
-*     independent whether it is enrolled or unenrolled 
+*     Returns the smallest task id currently existing in a job 
+*     which is enrolled in the JB_ja_tasks sublist of 'job'.
+*     If no task is enrolled 0 will be returned.
 *
 *  INPUTS
 *     const lListElem *job - JB_Type element 
 *
 *  RESULT
-*     u_long32 - task id
-*******************************************************************************/
-u_long32 job_get_biggest_task_id(const lListElem *job)
+*     u_long32 - task id or 0
+******************************************************************************/
+u_long32 job_get_smallest_enrolled_task_id(const lListElem *job)
 {
-   lListElem *last;
+   lListElem *ja_task;        /* JAT_Type */
+   lListElem *nxt_ja_task;    /* JAT_Type */
+   u_long32 ret = 0; 
+
+   /*
+    * initialize ret
+    */
+   ja_task = lFirst(lGetList(job, JB_ja_tasks)); 
+   nxt_ja_task = lNext(ja_task);
+   if (ja_task != NULL) {
+      ret = lGetUlong(ja_task, JAT_task_number);
+   }
+
+   /*
+    * try to find a smaller task id
+    */
+   while ((ja_task = nxt_ja_task)) {
+      nxt_ja_task = lNext(ja_task);
+
+      ret = MIN(ret, lGetUlong(ja_task, JAT_task_number));
+   }
+   return ret;
+}
+
+/****** gdi/job_jatask/job_get_biggest_unenrolled_task_id() *******************
+*  NAME
+*     job_get_biggest_unenrolled_task_id() -- find biggest unenrolled id 
+*
+*  SYNOPSIS
+*     u_long32 job_get_biggest_unenrolled_task_id(const lListElem *job) 
+*
+*  FUNCTION
+*     Returns the biggest task id currently existing in a job 
+*     which is not enrolled in the JB_ja_tasks sublist of 'job'.
+*     If no task is enrolled 0 will be returned.
+*
+*  INPUTS
+*     const lListElem *job - JB_Type element 
+*
+*  RESULT
+*     u_long32 - task id or 0
+******************************************************************************/
+u_long32 job_get_biggest_unenrolled_task_id(const lListElem *job)
+{
    u_long32 n_h_id, u_h_id, o_h_id, s_h_id;
    u_long32 ret = 0;
  
@@ -1201,14 +1253,66 @@ u_long32 job_get_biggest_task_id(const lListElem *job)
    u_h_id = range_list_get_last_id(lGetList(job, JB_ja_u_h_ids), NULL);    
    o_h_id = range_list_get_last_id(lGetList(job, JB_ja_o_h_ids), NULL);    
    s_h_id = range_list_get_last_id(lGetList(job, JB_ja_s_h_ids), NULL);    
-   last = lLast(lGetList(job, JB_ja_tasks)); 
    ret = n_h_id;
-   ret = MAX(ret, u_h_id);
-   ret = MAX(ret, o_h_id);
-   ret = MAX(ret, s_h_id);
-   if (last != NULL) {
-      ret = MAX(ret, lGetUlong(last, JAT_task_number));
-   } 
+   if (ret > 0 && u_h_id > 0) {
+      ret = MAX(ret, u_h_id);
+   } else if (u_h_id > 0) {
+      ret = u_h_id;
+   }
+   if (ret > 0 && o_h_id > 0) {
+      ret = MAX(ret, o_h_id);
+   } else if (o_h_id > 0) {
+      ret = o_h_id;
+   }
+   if (ret == 0 && s_h_id > 0)  {
+      ret = MAX(ret, s_h_id);
+   } else if (s_h_id > 0 ){
+      ret = s_h_id; 
+   }
+   return ret;
+}
+
+/****** gdi/job_jatask/job_get_biggest_enrolled_task_id() ********************
+*  NAME
+*     job_get_biggest_enrolled_task_id() -- find biggest enrolled tid 
+*
+*  SYNOPSIS
+*     u_long32 job_get_biggest_enrolled_task_id(const lListElem *job) 
+*
+*  FUNCTION
+*     Returns the biggest task id currently existing in a job 
+*     which is enrolled in the JB_ja_tasks sublist of 'job'.
+*     If no task is enrolled 0 will be returned.
+*
+*  INPUTS
+*     const lListElem *job - JB_Type element 
+*
+*  RESULT
+*     u_long32 - task id or 0
+******************************************************************************/
+u_long32 job_get_biggest_enrolled_task_id(const lListElem *job)
+{
+   lListElem *ja_task;        /* JAT_Type */
+   lListElem *nxt_ja_task;    /* JAT_Type */
+   u_long32 ret = 0; 
+
+   /*
+    * initialize ret
+    */
+   ja_task = lLast(lGetList(job, JB_ja_tasks)); 
+   nxt_ja_task = lPrev(ja_task);
+   if (ja_task != NULL) {
+      ret = lGetUlong(ja_task, JAT_task_number);
+   }
+
+   /*
+    * try to find a smaller task id
+    */
+   while ((ja_task = nxt_ja_task)) {
+      nxt_ja_task = lPrev(ja_task);
+
+      ret = MAX(ret, lGetUlong(ja_task, JAT_task_number));
+   }
    return ret;
 }
  
